...
        button.translatesAutoresizingMaskIntoConstraints = false
        button.contentHorizontalAlignment = .left;
        return button
    }()
    
    lazy var friendListTableView: UITableView = {
        let tableView = UITableView()
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.register(FriendListViewCell.self, forCellReuseIdentifier: FriendListViewCell.reuseIdentifier)
        tableView.register(FriendListInviteViewCell.self, forCellReuseIdentifier: FriendListInviteViewCell.reuseIdentifier)
        tableView.register(FriendListHeaderView.self, forHeaderFooterViewReuseIdentifier: FriendListHeaderView.reuseIdentifier)
        tableView.register(FriendListInviteHeaderView.self, forHeaderFooterViewReuseIdentifier: FriendListInviteHeaderView.reuseIdentifier)
        tableView.estimatedRowHeight = 150
...
        tableView.accessibilityIdentifier = "tableView"
        return tableView
    }()

    override init(frame: CGRect) {
        super.init(frame: frame)
        self.accessibilityIdentifier = "FriendListView"
        friendListEmptyView.isHidden = true
        commonInit()
        setupAutoLayout()
    }
    
    required init?(coder: NSCoder) {
...
