...
    lazy var searchBar: UISearchBar = {
        searchBar = UISearchBar()
        searchBar.placeholder = "想轉一筆給誰呢？"
        searchBar.translatesAutoresizingMaskIntoConstraints = false
        searchBar.autocapitalizationType = .none
        searchBar.backgroundImage = UIImage()
        searchBar.accessibilityIdentifier = "tableHeaderSearchBar"
        searchBar.isAccessibilityElement = true
        return searchBar
    }()
    
    func commonInit() {
        //self.accessibilityIdentifier = "FriendListHeaderView"
...
